# vidmux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-python-package.yml
src/vidmux/: __main__.py  cli.py  video_library_scan.py
src/vidmux/library_structure/: rules.py
tests/: conftest.py  test_library_scan.py  test_mux_audio_tracks.py
