[project]
name = "vidmux"
version = "0.1.0"
license = {file = "LICENSE"}
description = "Inspect and modify video/audio/subtitle tracks using FFmpeg."
readme = "README.md"
authors = [{name = "Philipp Meder", email = "148459685+PhilippMeder@users.noreply.github.com"}]
maintainers = [{name = "Philipp Meder", email = "148459685+PhilippMeder@users.noreply.github.com"}]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Changelog = "https://github.com/PhilippMeder/REPOSITORYNAME/commits"
Documentation = "https://github.com/PhilippMeder/REPOSITORYNAME/README.md"
Download = "https://github.com/PhilippMeder/REPOSITORYNAME"
Homepage = "https://github.com/PhilippMeder/REPOSITORYNAME"
Issues = "https://github.com/PhilippMeder/REPOSITORYNAME/issues"
Releasenotes = "https://github.com/PhilippMeder/REPOSITORYNAME/commits"
Source = "https://github.com/PhilippMeder/REPOSITORYNAME.git"

[project.scripts]
vidmux = "vidmux.__main__:main"

[project.optional-dependencies]
full = [
    "pytest",
    "ruff",
]